Element descriptions from documentation comments (#143)

--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/circle"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>Circle</ExampleTitle>
-<p>The SvgCircle class is responsible for providing the svg @("<circle>") element.</p>
+<ElementDescription ElementType="@typeof(SvgCircle)" />
 <ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <ElementApiDocs ElementType="@typeof(SvgCircle)" />
