--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/ellipse"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>Ellipse</ExampleTitle>
-<p>The SvgEllipse class is responsible for providing the svg @("<ellipse>") element.</p>
+<ElementDescription ElementType="@typeof(SvgEllipse)" />
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
 <ElementApiDocs ElementType="@typeof(SvgEllipse)" />
