--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/g"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>G</ExampleTitle>
-<p>The SvgG class is responsible for providing the svg @("<g>") element.</p>
+<ElementDescription ElementType="@typeof(SvgG)" />
 <ExampleComponent ExampleCode="@(new GExample())" />
 <ElementApiDocs ElementType="@typeof(SvgG)" />
