--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/line"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>Line</ExampleTitle>
-<p>The SvgLine class is responsible for providing the svg @("<line>") element.</p>
+<ElementDescription ElementType="@typeof(SvgLine)" />
 <ExampleComponent ExampleCode="@(new LineExample())" />
 <ElementApiDocs ElementType="@typeof(SvgLine)" />
