--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/path"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>Path</ExampleTitle>
-<p>The SvgPath class is responsible for providing the svg @("<path>") element.</p>
+<ElementDescription ElementType="@typeof(SvgPath)" />
 <ExampleComponent ExampleCode="@(new PathExample())" />
-<ElementApiDocs ElementType="@typeof(SvgBlazor.Elements.SvgPath)" />
+<ElementApiDocs ElementType="@typeof(SvgPath)" />
