--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/polygon"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>Polygon</ExampleTitle>
-<p>The SvgPolygon class is responsible for providing the svg @("<polygon>") element.</p>
+<ElementDescription ElementType="@typeof(SvgPolygon)" />
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPolygon)" />
