--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/elements/rect"
-@using SvgBlazor.Docs.Components
 
 <ExampleTitle>Rect</ExampleTitle>
-<p>The SvgRect class is responsible for providing the svg @("<rect>") element.</p>
+<ElementDescription ElementType="@typeof(SvgRect)" />
 <ExampleComponent ExampleCode="@(new RectExample())" />
 <ElementApiDocs ElementType="@typeof(SvgRect)" />
