--- a/src/SvgBlazor.Docs/Components/ElementApiDocs.razor
+++ b/src/SvgBlazor.Docs/Components/ElementApiDocs.razor
@@ -2,6 +2,7 @@
 @using System.Reflection
 @using SvgBlazor.Docs.Models
 @using SvgBlazor.Docs.Extensions
+@using SvgBlazor.Docs.Extractors
 
 <h2>@ElementType.Name API</h2>
 <h3>Properties</h3>
@@ -53,6 +54,8 @@
     [Parameter]
     public Type ElementType { get; set; }
 
+    private ElementApiMethodExtractor elementApiMethodExtractor = new ();
+
     private IEnumerable<ElementApiProperty> GetElementApiProperties()
     {
         foreach (var propertyInfo in ElementType.GetProperties(
@@ -72,19 +75,7 @@
 
     private IEnumerable<ElementApiMethod> GetElementApiMethods()
     {
-        foreach (var methodInfo in ElementType.GetMethods(
-            BindingFlags.Instance |
-            BindingFlags.Static |
-            BindingFlags.Public).Where(m => !m.IsSpecialName))
-        {
-            yield return new ElementApiMethod
-            {
-                Name = methodInfo.Name,
-                Parameters = ParametersToString(methodInfo.GetParameters()),
-                ReturnValue = methodInfo.ReturnType.Name,
-                Description = methodInfo.GetDocumentation(),
-            };
-        };
+        return elementApiMethodExtractor.Extract(ElementType);
     }
 
     private IEnumerable<string> ParametersToString(ParameterInfo[] parameters) =>
