--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor.css
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor.css
@@ -1,5 +1,6 @@
 ﻿.navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
+    margin-right: 1rem;
 }
 
 .top-row {
@@ -8,6 +9,7 @@
 }
 
 .navbar-brand {
+    padding-left: 1rem;
     font-size: 1.1rem;
 }
 
@@ -32,7 +34,7 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: #333;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -41,13 +43,13 @@
     }
 
 .nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
+    background-color: rgba(0,0,0,0.25);
+    color: black;
 }
 
 .nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
+    background-color: rgba(0,0,0,0.1);
+    color: black;
 }
 
 @media (min-width: 641px) {
