--- a/src/SvgBlazor.Docs/wwwroot/css/app.css
+++ b/src/SvgBlazor.Docs/wwwroot/css/app.css
@@ -1,7 +1,23 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+:root {
+    --bs-font-sans-serif: Poppins, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.content > h2:not(:first-child) {
+    margin-top: 3rem;
+}
+
+.content > h3 {
+    margin-top: 2rem;
+}
+
+.content > h4 {
+    margin-top: 1.5rem;
+}
+
+.content > h5 {
+    margin-top: 1rem;
 }
 
 a, .btn-link {
@@ -42,9 +58,9 @@ a, .btn-link {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
