--- a/src/SvgBlazor.Docs/Components/ExampleCode.razor
+++ b/src/SvgBlazor.Docs/Components/ExampleCode.razor
@@ -1,6 +1,6 @@
 ﻿@using System.IO;
 
-@((MarkupString)codeMarkup)
+<ExampleFormattedCode FormattedCode=@codeMarkup/>
 
 @code {
     private string codeMarkup;
