Provide a common way of docs code generation and styling (#154)
Co-authored-by: Aro Wierzbowski <arowierzbowski@gmail.com>

--- a/src/SvgBlazor.Docs/Pages/Index.razor
+++ b/src/SvgBlazor.Docs/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using Markdig
 @using System.IO;
 
-@((MarkupString)_htmlReadme)
+<ExampleFormattedCode FormattedCode=@_htmlReadme />
 
 @code {
     string _htmlReadme;
