API methods table proportions

--- a/src/SvgBlazor.Docs/Components/ElementApiDocs.razor
+++ b/src/SvgBlazor.Docs/Components/ElementApiDocs.razor
@@ -28,6 +28,12 @@
 
 <h3>Methods</h3>
 <table class="table">
+    <colgroup>
+        <col style="width: 20%;">
+        <col style="width: 20%;">
+        <col style="width: 15%;">
+        <col style="width: 45%;">
+    </colgroup>
     <thead>
         <tr>
             <th>Name</th>
