--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -15,73 +15,73 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/svg" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> SVG
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVG
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/circle" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Circle
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Circle
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/ellipse" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Ellipse
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Ellipse
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/line" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Line
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Line
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/polygon" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Polygon
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Polygon
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/rect" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Rect
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Rect
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/g" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> G
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> G
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/text" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Text
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Text
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/attributes/stroke" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Stroke
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Stroke
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/attributes/fill" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Fill
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Fill
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/path" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> Path
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> Path
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/svgvalue" Match="NavLinkMatch.All">
-                <span class="oi oi-caret-right" aria-hidden="true"></span> SvgValue
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> SvgValue
             </NavLink>
         </li>
     </ul>
