--- a/src/SvgBlazor.Docs/Pages/Index.razor
+++ b/src/SvgBlazor.Docs/Pages/Index.razor
@@ -14,6 +14,8 @@
         if (!String.IsNullOrEmpty(readmeContent))
         {
             _htmlReadme = Markdown.ToHtml(readmeContent);
+            Console.WriteLine("HtmlReadme");
+            Console.WriteLine(_htmlReadme);
         }
     }
 
