--- a/src/SvgBlazor.Docs/Pages/Attributes/Fill/FillPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Fill/FillPage.razor
@@ -20,3 +20,4 @@
 <div><ExampleComponent Width="400" ExampleCode="@(new FillRuleEvenOddExample())" /></div>
 
 <ElementApiDocs ElementType="@typeof(SvgFill)" />
+<ExampleCodeHighlighter />
