--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -4,3 +4,4 @@
 <ElementDescription ElementType="@typeof(SvgCircle)" />
 <ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <ElementApiDocs ElementType="@typeof(SvgCircle)" />
+<ExampleCodeHighlighter />
