--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -4,3 +4,4 @@
 <ElementDescription ElementType="@typeof(SvgEllipse)" />
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
 <ElementApiDocs ElementType="@typeof(SvgEllipse)" />
+<ExampleCodeHighlighter />
