--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -4,3 +4,4 @@
 <ElementDescription ElementType="@typeof(SvgG)" />
 <ExampleComponent ExampleCode="@(new GExample())" />
 <ElementApiDocs ElementType="@typeof(SvgG)" />
+<ExampleCodeHighlighter />
