--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -4,3 +4,4 @@
 <ElementDescription ElementType="@typeof(SvgPolygon)" />
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPolygon)" />
+<ExampleCodeHighlighter />
