--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -4,3 +4,4 @@
 <ElementDescription ElementType="@typeof(SvgRect)" />
 <ExampleComponent ExampleCode="@(new RectExample())" />
 <ElementApiDocs ElementType="@typeof(SvgRect)" />
+<ExampleCodeHighlighter />
