--- a/src/SvgBlazor.Docs/Pages/SvgValue/SvgValuePage.razor
+++ b/src/SvgBlazor.Docs/Pages/SvgValue/SvgValuePage.razor
@@ -10,3 +10,4 @@
 <p>Please note that when using implicit operator initialization, no unit type will be added. If you wish to provide a unit type, use one of the dedicated constructors:</p>
 <ExampleComponent ExampleCode="@(new SvgValueUnitTypeExample())" />
 <ElementApiDocs ElementType="@typeof(SvgValue)" />
+<ExampleCodeHighlighter />
