--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -4,3 +4,4 @@
 <ElementDescription ElementType="@typeof(SvgPath)" />
 <ExampleComponent ExampleCode="@(new PathExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPath)" />
+<ExampleCodeHighlighter />
