--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -14,8 +14,8 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/svg" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVG
+            <NavLink class="nav-link" href="/elements/svgcomponent" Match="NavLinkMatch.All">
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVGComponent
             </NavLink>
         </li>
 
