--- a/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentBasicInit.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentBasicInit.razor
@@ -1,6 +1,6 @@
-﻿<SvgComponent @ref="svgref" Width="500" Height="500" />
+﻿<SvgComponent @ref="svg" Width="500" Height="500" />
 
 @code
 {
-    private SvgComponent svgref;
+    private SvgComponent svg;
 }
