--- a/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentPlaygroundExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentPlaygroundExample.razor
@@ -4,7 +4,7 @@
 @code {
     SvgComponent svgref;
 
-    private async Task OnAddElement()
+    private void OnAddElement()
     {
         SvgElement c;
 
