--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/svgcomponent" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVGComponent
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVG component
             </NavLink>
         </li>
 
