--- a/src/SvgBlazor.Docs/Components/ExampleCode.razor
+++ b/src/SvgBlazor.Docs/Components/ExampleCode.razor
@@ -1,4 +1,5 @@
-﻿@using System.IO;
+﻿@using System.IO
+@using System.Text.RegularExpressions
 @inject IJSRuntime JS
 
 <h5>Code:</h5>
@@ -9,6 +10,9 @@
 
     [Parameter]
     public string ItemName { get; set; }
+
+    [Parameter]
+    public string Class { get; set; }
 
     ElementReference elementReference;
 
@@ -30,6 +34,13 @@
             using (var reader = new StreamReader(resourceStream))
             {
                 codeMarkup = reader.ReadToEnd();
+
+                if (string.IsNullOrWhiteSpace(Class))
+                {
+                    return;
+                }
+
+                codeMarkup = ReplaceClass(codeMarkup);
             }
         }
     }
@@ -40,5 +51,12 @@
         {
             await JS.InvokeVoidAsync("highlightCodeElement", elementReference);
         }
+    }
+
+    private string ReplaceClass(string str)
+    {
+        var regexString = "<code(.*)>";
+        var newCodeElement = $"<code class=\"{Class}\">";
+        return Regex.Replace(str, regexString, newCodeElement);
     }
 }
