--- a/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/SvgComponentPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/SvgComponentPage.razor
@@ -16,5 +16,5 @@
 
 <h5>BoudingBox calculation</h5>
 <SvgComponentGetBoundingBoxExample/>
-<ExampleCode ItemName="SvgComponentGetBoundingBoxExample" Class="language-csharp" />
+<ExampleCode ItemName="SvgComponentGetBoundingBoxExample" />
 <ElementApiDocs ElementType="@typeof(SvgComponent)" />
